--- a/app/src/main/res/layout/activity_level2.xml
+++ b/app/src/main/res/layout/activity_level2.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".me.information.Level2Activity">
 
+    <TextView
+        android:id="@+id/tv_idhub_vip"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:textColor="@color/wallet_text_black"
+        android:text="@string/wallet_idhub_super_vip_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title" />
+
     <include
         android:id="@+id/title"
         layout="@layout/wallet_common_title_layout"
@@ -15,5 +29,24 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tv_apply"
+        style="@style/WalletCommonButton"
+        android:layout_marginBottom="14dp"
+        android:text="@string/wallet_no_appply_for"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <include
+        android:id="@+id/loading_and_error"
+        layout="@layout/wallet_common_loading_and_error"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
