--- a/app/src/main/res/layout/activity_level5.xml
+++ b/app/src/main/res/layout/activity_level5.xml
@@ -5,67 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <RadioGroup
-                android:id="@+id/qualified_investor_condition"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="20dp"
-                android:orientation="vertical">
-
-                <RadioButton
-                    android:id="@+id/qualified_purchaser_condition_first"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/wallet_qualified_purchaser_condition_first"
-                    android:textSize="16sp" />
-
-                <RadioButton
-                    android:id="@+id/qualified_purchaser_condition_second"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:text="@string/wallet_qualified_purchaser_condition_second"
-                    android:textSize="16sp" />
-
-                <RadioButton
-                    android:id="@+id/qualified_purchaser_condition_third"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:text="@string/wallet_qualified_purchaser_condition_third"
-                    android:textSize="16sp" />
-
-                <RadioButton
-                    android:id="@+id/qualified_purchaser_condition_fourth"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:text="@string/wallet_qualified_purchaser_condition_fourth"
-                    android:textSize="16sp" />
-            </RadioGroup>
-
-            <TextView
-                android:id="@+id/tv_upgrade"
-                style="@style/WalletCommonButton"
-                android:layout_gravity="center"
-                android:layout_marginTop="50dp"
-                android:layout_marginBottom="14dp"
-                android:text="@string/wallet_commit" />
-        </LinearLayout>
-    </ScrollView>
+    <TextView
+        android:id="@+id/tv_idhub_vip"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:textColor="@color/wallet_text_black"
+        android:text="@string/wallet_compliance_investor_vip_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title" />
 
     <include
         android:id="@+id/title"
@@ -75,6 +28,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/tv_apply"
+        style="@style/WalletCommonButton"
+        android:layout_marginBottom="14dp"
+        android:text="@string/wallet_no_appply_for"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <include
         android:id="@+id/loading_and_error"
