--- a/app/src/main/res/layout/wallet_common_strings_item.xml
+++ b/app/src/main/res/layout/wallet_common_strings_item.xml
@@ -8,6 +8,8 @@
         android:id="@+id/tv_str"
         android:textColor="@color/wallet_black"
         android:textSize="13sp"
+        android:padding="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="sanlkfdsljghnkfdj" />
