--- a/app/src/main/res/layout/wallet_controllers_dialog_fragment.xml
+++ b/app/src/main/res/layout/wallet_controllers_dialog_fragment.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_cancel"
@@ -21,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="@string/wallet_wallet_select"
+        android:text="@string/wallet_controller"
         android:textColor="@color/wallet_black"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -29,23 +28,21 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/iv_setting"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
-        android:src="@mipmap/wallet_setting"
-        android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="@id/tv_title"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_title" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_wallet"
-        android:layout_width="0dp"
+    <com.idhub.wallet.common.ImagesList.StringsListView
+        android:id="@+id/controllers_list"
+        android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+    <include
+        android:id="@+id/loading_and_error"
+        layout="@layout/wallet_common_loading_and_error"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
