--- a/app/src/main/res/layout/wallet_fragment_me.xml
+++ b/app/src/main/res/layout/wallet_fragment_me.xml
@@ -36,6 +36,17 @@
                     app:layout_goneMarginBottom="10dp" />
 
                 <include
+                    android:id="@+id/id_hub_super_vip"
+                    layout="@layout/wallet_fragment_me_level_item_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="12dp"
+                    android:layout_marginBottom="20dp"
+                    app:layout_goneMarginBottom="10dp" />
+
+                <include
                     android:id="@+id/qualified_investor"
                     layout="@layout/wallet_fragment_me_level_item_view"
                     android:layout_width="match_parent"
@@ -70,7 +81,6 @@
 
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
-
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <include
