--- a/app/src/main/res/layout/wallet_activity_wallet_identity_recovery.xml
+++ b/app/src/main/res/layout/wallet_activity_wallet_identity_recovery.xml
@@ -8,8 +8,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-
+        <include
+            android:id="@+id/title"
+            layout="@layout/wallet_common_title_layout"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
         <TextView
             android:id="@+id/tv_import"
             style="@style/WalletCommonButton"
@@ -23,10 +29,12 @@
 
         <include
             android:id="@+id/top_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             layout="@layout/wallet_import_wallet_top_view"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/title" />
 
         <include
             android:id="@+id/loading_and_error"
