--- a/app/src/main/res/layout/wallet_activity_wallet_manager.xml
+++ b/app/src/main/res/layout/wallet_activity_wallet_manager.xml
@@ -58,16 +58,31 @@
         android:layout_height="48dp"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/line"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="0dp"
+        app:layout_constraintTop_toBottomOf="@id/cl_wallet"
+        android:layout_height="15dp"
+        android:background="@color/wallet_background"/>
     <include
         android:id="@+id/export_mnemonic"
         layout="@layout/wallet_wallet_manager_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cl_wallet" />
+        app:layout_constraintTop_toBottomOf="@id/export_password_hint" />
 
+    <include
+        android:id="@+id/export_password_hint"
+        layout="@layout/wallet_wallet_manager_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/line" />
     <include
         android:id="@+id/export_keystore"
         layout="@layout/wallet_wallet_manager_item"
