--- a/app/src/main/res/layout/wallet_dialog_fragment_wallet_list.xml
+++ b/app/src/main/res/layout/wallet_dialog_fragment_wallet_list.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/wallet_shape_dialog"
     android:layout_height="match_parent">
 
     <ImageView
@@ -42,7 +43,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_wallet"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_marginTop="5dp"
         app:layout_constraintLeft_toLeftOf="parent"
