--- a/app/src/main/res/layout/wallet_activity_identity_manager.xml
+++ b/app/src/main/res/layout/wallet_activity_identity_manager.xml
@@ -7,18 +7,43 @@
     tools:context=".createmanager.IdentityManagerActivity">
 
     <TextView
-        android:id="@+id/tv_identity_create"
-        android:layout_width="286dp"
-        android:layout_height="46dp"
-        android:background="@drawable/wallet_shape_circle"
-        android:gravity="center"
-        android:text="@string/wallet_identity_create"
-        android:textColor="@color/wallet_white"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@id/tv_identity_recover"
+        android:id="@+id/tv_main_title"
+        android:text="@string/wallet_main_create_wallet_tip"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:gravity="center"
+        android:textSize="18sp"
+        android:textColor="@color/wallet_create_wallet_text_black"
+        android:layout_marginTop="70dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:id="@+id/tv_identity_create"
+        app:layout_constraintTop_toBottomOf="@id/tv_main_title"
+        android:layout_marginTop="100dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:src="@mipmap/wallet_create_wallet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:text="@string/wallet_identity_create"
+            android:layout_width="wrap_content"
+            android:textSize="15sp"
+            android:layout_marginTop="13dp"
+            android:textColor="@color/wallet_create_wallet_text_gray"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/tv_identity_recover"
