--- a/app/src/main/res/values/wallet_strings.xml
+++ b/app/src/main/res/values/wallet_strings.xml
@@ -181,6 +181,12 @@
     <string name="wallet_already_upload_success">当前添加文件已经上传</string>
     <string name="wallet_upload_information_again_apply">请上传基本信息之后再次尝试申请</string>
     <string name="wallet_claim_vip_fail">请求发送失败，请重新申请</string>
+    <string name="wallet_select_date">请选择时间</string>
+    <string name="wallet_year">年</string>
+    <string name="wallet_month">月</string>
+    <string name="wallet_date">日</string>
+    <string name="wallet_hour">时</string>
+    <string name="wallet_minute">分</string>
 
     //dapp
     <string name="wallet_dapp_search_hint">搜索或输入DApp网址</string>
@@ -340,4 +346,6 @@
     <string name="wallet_login_fail">登陆失败</string>
     <string name="wallet_not_found_assets">钱包下找不到此资产</string>
 
+    //main create wallet
+    <string name="wallet_main_create_wallet_tip">请选择当前您进入IDHub的身份</string>
 </resources>
