--- a/app/src/main/res/layout/wallet_activity_identity_manager.xml
+++ b/app/src/main/res/layout/wallet_activity_identity_manager.xml
@@ -6,70 +6,101 @@
     android:layout_height="match_parent"
     tools:context=".createmanager.IdentityManagerActivity">
 
-    <TextView
-        android:id="@+id/tv_main_title"
-        android:text="@string/wallet_main_create_wallet_tip"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:textColor="@color/wallet_create_wallet_text_black"
-        android:layout_marginTop="70dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
     <LinearLayout
         android:id="@+id/tv_identity_create"
-        app:layout_constraintTop_toBottomOf="@id/tv_main_title"
-        android:layout_marginTop="100dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
         android:gravity="center"
         android:orientation="vertical"
-        android:layout_height="wrap_content">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_main_title">
 
         <ImageView
-            android:src="@mipmap/wallet_create_wallet"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:src="@mipmap/wallet_create_wallet" />
 
         <TextView
-            android:text="@string/wallet_identity_create"
             android:layout_width="wrap_content"
-            android:textSize="15sp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="13dp"
+            android:text="@string/wallet_identity_create"
             android:textColor="@color/wallet_create_wallet_text_gray"
-            android:layout_height="wrap_content" />
+            android:textSize="15sp" />
     </LinearLayout>
 
-
-    <TextView
+    <ImageView
+        android:id="@+id/line"
+        app:layout_constraintTop_toBottomOf="@id/tv_identity_create"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="30dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:src="@mipmap/wallet_main_create_line"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <LinearLayout
         android:id="@+id/tv_identity_recover"
-        android:layout_width="286dp"
-        android:layout_height="46dp"
-        android:background="@drawable/wallet_shape_circle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="23dp"
+        android:layout_marginRight="50dp"
         android:gravity="center"
-        android:text="@string/wallet_identity_recovery"
-        android:textColor="@color/wallet_white"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@id/tv_identity_import"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:orientation="vertical"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_identity_create" />
+        app:layout_constraintTop_toBottomOf="@id/line">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/wallet_recovery_wallet" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13dp"
+            android:text="@string/wallet_identity_recovery"
+            android:textColor="@color/wallet_create_wallet_text_gray"
+            android:textSize="15sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/tv_identity_import"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="23dp"
+        android:gravity="center"
+        android:layout_marginLeft="50dp"
+        android:orientation="vertical"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/line">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/wallet_import_wallet" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13dp"
+            android:text="@string/wallet_identity_import"
+            android:textColor="@color/wallet_create_wallet_text_gray"
+            android:textSize="15sp" />
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/tv_identity_import"
-        android:layout_width="286dp"
-        android:layout_height="46dp"
-        android:background="@drawable/wallet_shape_circle"
+        android:id="@+id/tv_main_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
         android:gravity="center"
-        android:text="@string/wallet_identity_import"
-        android:textColor="@color/wallet_white"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/wallet_main_create_wallet_tip"
+        android:textColor="@color/wallet_create_wallet_text_black"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_identity_recover" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
