--- a/app/src/main/res/layout/wallet_activity_upload_user_basic_info.xml
+++ b/app/src/main/res/layout/wallet_activity_upload_user_basic_info.xml
@@ -8,26 +8,38 @@
 
     <ImageView
         android:id="@+id/iv_user_head"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="90dp"
         android:src="@mipmap/wallet_default_head"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_welcome"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="20dp"
+        android:textSize="15sp"
+        android:textColor="@color/wallet_create_wallet_text_gray"
+        app:layout_constraintTop_toBottomOf="@id/iv_user_head"
+        android:text="@string/wallet_welcome_to_did_world"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <include
         android:id="@+id/user_name"
-        layout="@layout/wallet_common_input_information_item"
+        layout="@layout/wallet_input_user_basic_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@id/iv_user_head" />
+        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />
 
     <include
         android:id="@+id/user_nick_name"
-        layout="@layout/wallet_common_input_information_item"
-        android:layout_marginTop="15dp"
+        layout="@layout/wallet_input_user_basic_info"
+        android:layout_marginTop="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/user_name" />
@@ -36,22 +48,16 @@
         android:id="@+id/tv_upload"
         style="@style/WalletCommonButton"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="60dp"
+        android:layout_width="195dp"
+        android:layout_height="38dp"
+        android:textSize="15sp"
+        android:background="@color/wallet_user_basic_info_btn"
         android:layout_marginBottom="14dp"
         android:text="@string/wallet_commit"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/user_nick_name"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
-
-    <include
-        android:id="@+id/title"
-        layout="@layout/wallet_common_title_layout"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
 
     <include
         android:id="@+id/loading_and_error"
