--- a/app/src/main/res/values/wallet_styles.xml
+++ b/app/src/main/res/values/wallet_styles.xml
@@ -7,6 +7,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="WalletSplashTheme" parent="WalletAppTheme">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
 
     <style name="WalletCommonButton">
         <item name="android:layout_width">330dp</item>
