--- a/app/src/main/res/values/wallet_colors.xml
+++ b/app/src/main/res/values/wallet_colors.xml
@@ -38,4 +38,5 @@
     <color name="wallet_create_wallet_text_gray">#cccccc</color>
     <color name="wallet_create_wallet_hint">#d5d5d5</color>
     <color name="wallet_user_basic_info_btn">#5cc9eb</color>
+    <color name="wallet_input_password_text_gray">#8d8d8d</color>
 </resources>
