--- a/app/src/main/res/layout/wallet_activity_input_password.xml
+++ b/app/src/main/res/layout/wallet_activity_input_password.xml
@@ -6,153 +6,134 @@
     android:layout_height="match_parent"
     tools:context=".createmanager.walletcreate.InputPasswordActivity">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <EditText
+                android:id="@+id/et_wallet_name"
+                style="@style/WalletCommonEditText"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/create_icon" />
+
+            <EditText
+                android:id="@+id/et_password"
+                style="@style/WalletCommonEditText"
+                android:inputType="textPassword"
+                android:layout_marginTop="15dp"
+                app:layout_constraintTop_toBottomOf="@id/ll_warning" />
+
+            <EditText
+                android:id="@+id/et_password_again"
+                style="@style/WalletCommonEditText"
+                android:inputType="textPassword"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/et_password" />
+
+            <EditText
+                android:id="@+id/et_password_tip"
+                style="@style/WalletCommonEditText"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/et_password_again" />
+
+            <ImageView
+                android:id="@+id/create_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="55dp"
+                android:layout_marginTop="15dp"
+                android:src="@mipmap/wallet_create_keystore"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_main_title" />
+
+            <LinearLayout
+                android:id="@+id/ll_warning"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="50dp"
+                android:background="@color/wallet_orange"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@id/et_wallet_name">
+
+                <TextView
+                    android:id="@+id/tv_warning_top"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/wallet_password_warning_top"
+                    android:textColor="@color/wallet_text_orange"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tv_warning_bottom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:text="@string/wallet_password_warning_bottom"
+                    android:textColor="@color/wallet_text_orange"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_main_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:gravity="center"
+                android:text="@string/wallet_welcome_to_did_world"
+                android:textColor="@color/wallet_create_wallet_text_black"
+                android:textSize="18sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="13dp"
+                android:text="@string/wallet_create_wallet"
+                android:textColor="@color/wallet_input_password_text_gray"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@id/create_icon"
+                app:layout_constraintLeft_toRightOf="@id/create_icon"
+                app:layout_constraintTop_toTopOf="@id/create_icon" />
+
+            <TextView
+                android:id="@+id/tv_create"
+                android:layout_width="195dp"
+                android:layout_height="38dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="44dp"
+                android:background="@color/wallet_user_basic_info_btn"
+                android:gravity="center"
+                android:text="@string/wallet_create_btn"
+                android:textColor="@color/wallet_white"
+                android:textSize="15sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginTop="30dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/et_password_tip" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
+
+
     <include
         android:id="@+id/title"
         layout="@layout/wallet_common_title_layout"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/ll_warning"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/wallet_orange"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/title">
-
-        <TextView
-            android:id="@+id/tv_warning_top"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="12dp"
-            android:text="@string/wallet_password_warning_top"
-            android:textColor="@color/wallet_text_orange"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/tv_warning_bottom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="12dp"
-            android:text="@string/wallet_password_warning_bottom"
-            android:textColor="@color/wallet_text_orange"
-            android:textSize="12sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_wallet_name"
-        android:layout_width="294dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll_warning">
-
-        <EditText
-            android:id="@+id/et_wallet_name"
-            android:layout_width="match_parent"
-            android:layout_height="34dp"
-            android:background="@null"
-            android:hint="@string/wallet_wallet_name"
-            android:textColor="@color/wallet_edittext_color"
-            android:textColorHint="@color/wallet_hint"
-            android:textSize="14sp" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/wallet_line_gray" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_password"
-        android:layout_width="294dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll_wallet_name">
-
-        <EditText
-            android:id="@+id/et_password"
-            android:layout_width="match_parent"
-            android:layout_height="34dp"
-            android:background="@null"
-            android:hint="@string/wallet_password"
-            android:textColor="@color/wallet_edittext_color"
-            android:textColorHint="@color/wallet_hint"
-            android:textSize="14sp" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/wallet_line_gray" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_password_again"
-        android:layout_width="294dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll_password">
-
-        <EditText
-            android:id="@+id/et_password_again"
-            android:layout_width="match_parent"
-            android:layout_height="34dp"
-            android:background="@null"
-            android:hint="@string/wallet_password_again"
-            android:textColor="@color/wallet_edittext_color"
-            android:textColorHint="@color/wallet_hint"
-            android:textSize="14sp" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/wallet_line_gray" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/password_tip"
-        android:layout_width="294dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll_password_again">
-
-        <EditText
-            android:id="@+id/et_password_tip"
-            android:layout_width="match_parent"
-            android:layout_height="34dp"
-            android:background="@null"
-            android:hint="@string/wallet_password_tip"
-            android:textColor="@color/wallet_edittext_color"
-            android:textColorHint="@color/wallet_hint"
-            android:textSize="14sp" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/wallet_line_gray" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_create"
-        style="@style/WalletCommonButton"
-        android:layout_marginBottom="14dp"
-        android:text="@string/wallet_create"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
 
     <include
         android:id="@+id/loading_and_error"
