--- a/app/src/main/res/layout/wallet_activity_upload_user_basic_info.xml
+++ b/app/src/main/res/layout/wallet_activity_upload_user_basic_info.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".createmanager.UploadUserBasicInfoActivity">
 
+    <EditText
+        android:id="@+id/user_nick_name"
+        style="@style/WalletCommonEditText"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@id/user_name" />
+
+    <EditText
+        android:id="@+id/user_name"
+        style="@style/WalletCommonEditText"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />
+
     <ImageView
         android:id="@+id/iv_user_head"
         android:layout_width="75dp"
@@ -18,46 +30,31 @@
 
     <TextView
         android:id="@+id/tv_welcome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/wallet_welcome_to_did_world"
+        android:textColor="@color/wallet_create_wallet_text_gray"
+        android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="20dp"
-        android:textSize="15sp"
-        android:textColor="@color/wallet_create_wallet_text_gray"
-        app:layout_constraintTop_toBottomOf="@id/iv_user_head"
-        android:text="@string/wallet_welcome_to_did_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <include
-        android:id="@+id/user_name"
-        layout="@layout/wallet_input_user_basic_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />
-
-    <include
-        android:id="@+id/user_nick_name"
-        layout="@layout/wallet_input_user_basic_info"
-        android:layout_marginTop="40dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/user_name" />
+        app:layout_constraintTop_toBottomOf="@id/iv_user_head" />
 
     <TextView
         android:id="@+id/tv_upload"
-        style="@style/WalletCommonButton"
-        android:layout_gravity="center"
-        android:layout_marginTop="60dp"
+        android:gravity="center"
+        android:textColor="@color/wallet_white"
         android:layout_width="195dp"
         android:layout_height="38dp"
-        android:textSize="15sp"
-        android:background="@color/wallet_user_basic_info_btn"
+        android:layout_gravity="center"
+        android:layout_marginTop="60dp"
         android:layout_marginBottom="14dp"
+        android:background="@color/wallet_user_basic_info_btn"
         android:text="@string/wallet_commit"
-        app:layout_constraintTop_toBottomOf="@id/user_nick_name"
+        android:textSize="15sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/user_nick_name" />
 
     <include
         android:id="@+id/loading_and_error"
