--- a/app/src/main/res/values/wallet_strings.xml
+++ b/app/src/main/res/values/wallet_strings.xml
@@ -15,6 +15,7 @@
     <string name="wallet_password_again">重复密码</string>
     <string name="wallet_password_tip">密码提示信息</string>
     <string name="wallet_create">创建</string>
+    <string name="wallet_create_btn">创  建</string>
     <string name="wallet_create_wallet">创建钱包</string>
     <string name="wallet_backup_hint">备份提示</string>
     <string name="wallet_backup_mnemonic">备份助记词</string>
