--- a/app/src/main/res/values/wallet_styles.xml
+++ b/app/src/main/res/values/wallet_styles.xml
@@ -11,6 +11,20 @@
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowIsTranslucent">true</item>
     </style>
+ <style name="WalletCommonEditText" >
+     <item name="android:layout_width">match_parent</item>
+     <item name="android:layout_height">wrap_content</item>
+     <item name="android:background">@drawable/wallet_user_basic_info_edit_background</item>
+     <item name="android:gravity">left</item>
+     <item name="android:textSize">15sp</item>
+     <item name="android:textColorHint">@color/wallet_create_wallet_hint</item>
+     <item name="android:paddingLeft">13dp</item>
+     <item name="android:paddingTop">10dp</item>
+     <item name="android:paddingRight">13dp</item>
+     <item name="android:paddingBottom">10dp</item>
+     <item name="android:layout_marginLeft">50dp</item>
+     <item name="android:layout_marginRight">50dp</item>
+    </style>
 
     <style name="WalletCommonButton">
         <item name="android:layout_width">330dp</item>
